--- a/philo/Makefile
+++ b/philo/Makefile
@@ -3,7 +3,7 @@ MAKE = make
 CC = cc
 FLAGS = -Wall -Werror -Wextra -g3
 SRC = philosophers.c philosophers_utils.c philosophers_init.c lst_utils.c \
-actions.c
+actions.c philosophers_init2.c
 
 OBJS = $(SRC:.c=.o)
 
@@ -16,7 +16,7 @@ $(NAME): $(OBJS)
 	$(CC) $(FLAGS) -c $< -o $(<:.c=.o) -I ./
 
 valgrind: all
-	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes -s ./philo 5 800 400 200 10
+	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes -s -pthread ./philo 5 800 400 200 10
 
 clean:
 	rm -rf $(OBJS)
