--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,10 +1,10 @@
 NAME = philo
 MAKE = make
 CC = cc
-# FLAGS = -Wall -Werror -Wextra -pthread -fsanitize=thread -g3
-FLAGS = -Wall -Werror -Wextra -pthread -g3
+FLAGS = -Wall -Werror -Wextra -pthread -fsanitize=thread -g3
 SRC = philosophers.c philosophers_utils.c philosophers_init.c lst_utils.c \
-actions.c philosophers_init2.c philosophers_health_monitor.c philosophers_time_utils.c
+actions.c philosophers_init2.c philosophers_health_monitor.c philosophers_time_utils.c \
+get_locks.c
 
 OBJS = $(SRC:.c=.o)
 
